# gxl

./: .bazelrc  .clang-tidy  MODULE.bazel  README.md  WORKSPACE
abxl/base/: BUILD  README.md  source_location.h  types.h
abxl/file/: BUILD  README.md  file.cc  file.h  file_helpers.cc  file_helpers.h  file_path.cc  file_path.h  filelineiter.h  filesystem.cc  filesystem.h  path.cc  path.h
abxl/proto/: BUILD  README.md  protobuf_matchers.cc
abxl/protobuf/: BUILD  README.md  protobuf_matchers.h
abxl/status/: BUILD  README.md  status_builder.cc  status_builder.h  status_builder_test.cc  status_macros.h  status_matchers.cc  status_matchers.h  status_matchers_test.cc
abxl/utf8/: BUILD  README.md  unicodetext.cc  unicodetext.h  unicodetext_main.cc  unicodetext_test.cc  unilib.cc  unilib.h  unilib_utf8_utils.h
gxl/base/: BUILD  README.md  endian.h  endian_test.cc  source_location.h  types.h
gxl/base/internal/: unaligned_access.h
gxl/file/: BUILD  README.md  file.cc  file.h  filelineiter.h  filesystem.cc  filesystem.h  path.cc  path.h
gxl/proto/: BUILD  parse_text_proto.h  proto_enum_utils.h  protobuf_matchers.cc  protobuf_matchers.h  protobuf_util.h  protoutil.h
gxl/status/: BUILD  README.md  status_builder.cc  status_builder.h  status_builder_test.cc  status_macros.h  status_matchers.cc  status_matchers.h  status_matchers_test.cc
gxl/utf8/: BUILD  unicodetext.cc  unicodetext.h  unicodetext_main.cc  unicodetext_test.cc  unilib.cc  unilib.h  unilib_utf8_utils.h
